uptade on the css and html 2.1

--- a/index.html
+++ b/index.html
@@ -4,64 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Fix</title>
+    <title>Irescue Mobile Repair</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!--Navegation BAR-->
     <nav class="nav_background">
+     <a href="#" class="page_icon"><img class="nav_icon" src="./images/icon.png" alt="Phone Icon"></a>
         <ul class="nav-list">
-            <li class="nav_menu"><a class="nav_item" href="#">Book Repair</a></li>
+            <li class="nav_menu"><a class="nav_item" href="#">Contact Us</a></li>
             <li class="nav_menu"><a class="nav_item" href="#">Other Services</a></li>
             <li class="nav_menu"><a class="nav_item" href="#">Locations</a></li>
-            <li class="nav_menu"><a class="nav_item" href="#">Contact Us</a></li>
+            <li class="nav_menu"><a class="nav_item" href="#">Book a Service</a></li>
         </ul>
     </nav>
-    <!--HEADER-->
-    <header class="header">
-        <div class="header_img"></div>
-        <h1 class="header_title">Trusted phone repair at your location.</h1>
-        <p class="header_slogan">Phone repair made simple<p/>
-        <div class="header_botton">
-            <p class="botton_paragraph"><a class="botton_item"  href="#">Book Service</a></p>
-        </div>
-    </header>
-    <!--SECTION 1 -->
-    <section class="section_1">
-        <div class="main_container1">
-            <h1 class="contaner1_title" >Why The Fix?</h1>
-            <div class="container1_item1">
-                <h1 class="container1_header">We come to you!</h1>
-                <p class="container1_paragraph">We fix your phone on the spot, at your home or office</p>
+    <main>
+        <!--HEADER-->
+        <header class="header">
+            <div class="header_img"></div>
+            <h1 class="header_title">Trusted phone repair at your location.</h1>
+            <p class="header_slogan">Phone repair made simple<p/>
+            <div class="header_botton">
+                <p class="botton_paragraph"><a class="botton_item"  href="#">Book Service</a></p>
             </div>
-            <div class="container1_item2">
-                <h1 class="container1_header">On time, every time</h1>
-                <p class="container1_paragraph">Get a quote in seconds. Your iPhone screen repair is done in as little as one hour</p>
+        </header>
+        <!--SECTION 1 -->
+        <section class="section_1">
+            <div class="main_container1">
+                <h1 class="contaner1_title" >Why Irescue?</h1>
+                <div class="container1_item1">
+                    <h1 class="container1_header">We come to you!</h1>
+                    <p class="container1_paragraph">We fix your phone on the spot, at your home or office</p>
+                </div>
+                <div class="container1_item2">
+                    <h1 class="container1_header">On time, every time</h1>
+                    <p class="container1_paragraph">Get a quote in seconds. Your iPhone screen repair is done in as little as one hour</p>
+                </div>
+                <div class="container1_item3">
+                    <h1 class="container1_header">Risk free</h1>
+                    <p class="container1_paragraph">Parts and labor guaranteed</p>
+                </div>
             </div>
-            <div class="container1_item3">
-                <h1 class="container1_header">Risk free</h1>
-                <p class="container1_paragraph">Parts and labor guaranteed</p>
+        </section>
+        <!--SECTION 2-->
+        <section class="section_2">
+            <div class="main_container2">
+                <h1 class="contaner2_title" >HOW DOES IT WORK ?</h1>
+                <div class="container2_item1">
+                    <h1 class="container2_header">Tell us about your device!</h1>
+                    <p class="container2_paragraph">We support Apple, Google and Samsung phones and tablets</p>
+                </div>
+                <div class="container2_item2">
+                    <h1 class="container2_header">Get on with your day</h1>
+                    <p class="container2_paragraph">We supply the parts and skills. No need to ship your device, drive to a store or wait in line</p>
+                </div>
+                <div class="container2_item3">
+                    <h1 class="container2_header">Confirm a time and location</h1>
+                    <p class="container2_paragraph">Our technicians meet you same day, wherever you may be</p>
+                </div>
             </div>
-        </div>
-    </section>
-    <!--SECTION 2-->
-    <section class="section_2">
-        <div class="main_container2">
-            <h1 class="contaner2_title" >HOW DOES IT WORK ?</h1>
-            <div class="container2_item1">
-                <h1 class="container2_header">Tell us about your device!</h1>
-                <p class="container2_paragraph">We support Apple, Google and Samsung phones and tablets</p>
-            </div>
-            <div class="container2_item2">
-                <h1 class="container2_header">Get on with your day</h1>
-                <p class="container2_paragraph">We supply the parts and skills. No need to ship your device, drive to a store or wait in line</p>
-            </div>
-            <div class="container2_item3">
-                <h1 class="container2_header">Confirm a time and location</h1>
-                <p class="container2_paragraph">Our technicians meet you same day, wherever you may be</p>
-            </div>
-        </div>
-    </section>
-    
+        </section>
+    </main>  
 </body>
 </html>
