--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <nav class="nav_background">
      <a href="#" class="page_icon"><img class="nav_icon" src="./images/icon.png" alt="Phone Icon"></a>
         <ul class="nav-list">
-            <li class="nav_menu"><a class="nav_item" href="#">Contact Us</a></li>
-            <li class="nav_menu"><a class="nav_item" href="#">Other Services</a></li>
+            <li class="nav_menu"><a class="nav_item" href="#">Home</a></li>
+            <li class="nav_menu"><a class="nav_item" href="#">Book Service</a></li>
             <li class="nav_menu"><a class="nav_item" href="#">Locations</a></li>
-            <li class="nav_menu"><a class="nav_item" href="#">Book a Service</a></li>
-        </ul>
+            <li class="nav_menu"><a class="nav_item" href="#">Contact Us</a></li>
+            <li class="nav_login">Login</li>
+  
     </nav>
     <main>
         <!--HEADER-->
