--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--Navegation BAR-->
     <nav class="nav_background">
-     <a href="#" class="page_icon"><img class="nav_icon" src="./images/icon.png" alt="Phone Icon"></a>
+     <a href="#" class="page_icon"><img class="nav_icon" src="./images/icon_adobe_express.svg" alt="Phone Icon"></a>
         <ul class="nav-list">
             <li class="nav_menu"><a class="nav_item" href="#">Home</a></li>
             <li class="nav_menu"><a class="nav_item" href="#">Book Service</a></li>
@@ -63,6 +63,35 @@
                     <h1 class="container2_header">Confirm a time and location</h1>
                     <p class="container2_paragraph">Our technicians meet you same day, wherever you may be</p>
                 </div>
+            </div>
+        </section>
+        <!--Services we provide-->
+        <aside>
+            <h1 class="aside_title">Service We Provide</h1>
+            <div class="item_1">screen Repair</div>
+            <div class="item_2">Baterry Replacement</div>
+            <div class="item_3">Camera replacement</div>
+            <div class="item_4">Water damaged </div>
+            <div class="item_5">Wifi/Bluetooh</div>
+            <div class="item_6">Home Botton</div>
+            <div class="item_7">Charging ports</div>
+            <div class="item_8">Side Bottons</div>    
+        </aside>
+        <!--Section 3-->
+        <section  class="section_3">
+            <div class="standards">
+            <img class="standards_home-icon" src="./images/home.svg" alt="home icon">
+            <p class="standards_paragraph1">Trusted by 2M+
+                Households</p>
+            <img class="standards_phone_icon" src="./images/phone.svg" alt=" phone icon">
+            <p class="standards_paragraph2">5 Star Technician
+                Rating</p>
+            <img class="standards_check-icon" src="./images/check.svg" alt=" check icon">
+            <p class="standards_paragraph3">Background
+                Checked Technicians</p>
+            <img  class="standards_shield-icon" src="./images/shield.svg" alt=" shield icon">
+            <p class="standards_paragraph4">90 Day Service
+                Guaranteed</p>
             </div>
         </section>
     </main>  
