--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <aside>
             <h1 class="aside_title">Service We Provide</h1>
             <div class="item_1">screen Repair</div>
-            <div class="item_2">Baterry Replacement</div>
+            <div class="item_2">Battery Replacement</div>
             <div class="item_3">Camera replacement</div>
             <div class="item_4">Water damaged </div>
             <div class="item_5">Wifi/Bluetooh</div>
