--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!--Navegation BAR-->
-    <nav class="nav_background">
-     <a href="#" class="page_icon"><img class="nav_icon" src="./images/icon_adobe_express.svg" alt="Phone Icon"></a>
-        <ul class="nav-list">
-            <li class="nav_menu"><a class="nav_item" href="#">Home</a></li>
-            <li class="nav_menu"><a class="nav_item" href="#">Book Service</a></li>
-            <li class="nav_menu"><a class="nav_item" href="#">Locations</a></li>
-            <li class="nav_menu"><a class="nav_item" href="#">Contact Us</a></li>
-            <li class="nav_login">Login</li>
   
-    </nav>
     <main>
         <!--HEADER-->
-        <header class="header">
+        <header role="heading" class="header">
             <div class="header_img"></div>
             <h1 class="header_title">Trusted phone repair at your location.</h1>
             <p class="header_slogan">Phone repair made simple<p/>
             <div class="header_botton">
                 <p class="botton_paragraph"><a class="botton_item"  href="#">Book Service</a></p>
             </div>
+
+              <!--Navegation BAR-->
+            <nav  role="navigation" class="nav_background">
+                <a href="#" class="page_icon"><img class="nav_icon" src="./images/icon_adobe_express.svg" alt="Phone Icon"></a>
+                <ul class="nav-sub-menu">
+                    <li class="nav_menu"><a class="nav_item" href="#">Home</a></li>
+                    <li class="nav_menu"><a class="nav_item" href="#">Book Service</a></li>
+                    <li class="nav_menu"><a class="nav_item" href="#">Locations</a></li>
+                    <li class="nav_menu"><a class="nav_item" href="#">Contact Us</a></li>
+                    <li class="nav_login">Login</li>
+                </ul>    
+            </nav>
         </header>
         <!--SECTION 1 -->
         <section class="section_1">
@@ -67,7 +69,7 @@
         </section>
         <!--Services we provide-->
         <aside>
-            <h1 class="aside_title">Service We Provide</h1>
+            <h1 class="aside_title">Services We Provide</h1>
             <div class="item_1">screen Repair</div>
             <div class="item_2">Battery Replacement</div>
             <div class="item_3">Camera replacement</div>
@@ -97,3 +99,8 @@
     </main>  
 </body>
 </html>
+
+
+
+
+
