Responsive uptated on nav

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
             <li class="nav_menu"><a class="nav_item" href="#">Locations</a></li>
             <li class="nav_menu"><a class="nav_item" href="#">Contact Us</a></li>
             <li class="nav_menu"><a class="nav_item" href="#">Login</a></li>
-        </ul>    
+        </ul>   
+        <img class="nav_mobile-menu" src="./images/menu-svgrepo-com.svg" alt="Mobile Menu">
     </nav>
        <!--HEADER-->
          <header  class="header">
             <div class="nav_container">
                 <h1 class="header_title">Trusted phone repair at your location.</h1>
                 <p class="header_slogan">Phone repair made simple<p/>
-                <div class="header_botton">
-                    <a><p class="botton_paragraph">Book Service</div></p></a>
-                </div>
+                <div class="header_botton"></div>
+                    <a href="#"><button class="nav_button">Book Service</button><a>
+                
             </div>
         </header>
         <!--SECTION 1 -->
