css and header update

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <!--HEADER-->
         <header class="header">
             <div class="nav_container">
+                <img class="header_img" src="./images/iphone icon for header.png" alt=" iphone">
                 <h1 class="header_title">Trusted phone repair at your location.</h1>
                 <p class="header_slogan">Phone repair made simple
                     <p />
@@ -55,22 +56,22 @@
         </article>
         <figure class="catalog_container">
             
-            <!--<h2 class="catalog_title">Browse Repairs Across Devices</h2> -->
+            
             <div class="card_container">
                     <div class="catalog_item1">
-                        <img  class="card_img" src="./images/iphone-13.png" alt="iPhone">
+                        <img  class="card_img" src="./images/phones card.png" alt="iPhone">
                         <p class="card_paragraph">Phone Repair</p>
                         <a  href="#"><button type="submit" class="catalog_botton">Get it Fix</button></a>
 
                     </div>
                     <div class="catalog_item2">
-                    <img class="card_img" src="./images/20200709-tablet-05.webp" alt="Tablet">
-                    <p class="card_paragraph" >Tablet Repair</p>
+                    <img class="card_img" src="./images/macbook card .png" alt="Macbook">
+                    <p class="card_paragraph" >Computer Repair</p>
                     <a href="#"><button type="submit" class="catalog_botton">Get it Fix</button></a>
                 </div>
                 <div class="catalog_item3">
-                    <img class="card_img" src="./images/200413-ipad-pro-main-cover-cs-343p.webp" alt=" Ipad">
-                    <p class="card_paragraph">Ipad Repair</p>
+                    <img class="card_img" src="./images/ipad card.png" alt=" Ipad">
+                    <p class="card_paragraph">Tablet Repair</p>
                     <a  href="#"><button type="submit"  class="catalog_botton">Get it Fix</button></a>
                 </div>
             </div>    
