--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
                 </div>
             </div>
 
+            <div class="attribution">
+            Coded by <a href="https://github.com/cordovacarlos22" target="_blank">Carlos  Manuel Cordova Ortiz</a>
+              </div>
+
 
         </footer>
 
