--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
            
             <div class="footer_main-container">
                 <div class="f-list1">
-                    <h1>REPAIRS</h1>
+                    <h1>Repairs</h1>
                     <ul>
                         <li class="f_li"> <a class="nav_item" href="#">Iphone</a></li>
                         <li class="f_li"> <a class="nav_item" href="#">Ipad</a></li>
