css update and add email  fill to contact form

--- a/index.html
+++ b/index.html
@@ -184,15 +184,15 @@
                 <h1>Contact Us</h1>
                 <label for="fname">First Name</label>
                 <input required type="text" id="fname" name="firstname" placeholder="Your name..">
-
                 <label for="lname">Last Name</label>
                 <input required type="text" id="lname" name="lastname" placeholder="Your last name..">
-
+                <label for="lname">Email</label>
+                <input required type="text" id="lemail" name="lastname" placeholder="Your email address..">
                 <label for="country">Country</label>
                 <select required id="country" name="country">
                     <option value="usa">USA</option>
                     <option value="canada">Canada</option>
-                    <option value="australia">Australia</option>
+                    <option value="australia">El Salvador</option>
                     <option value="mexico">Mexico</option>
 
 
