form html update

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <!-- contact us form -->
         <div class="container">
-            <form action="#">
+            <form  role="form" action="#">
                 <h1>Contact Us</h1>
                 <label for="fname">First Name</label>
                 <input required type="text" id="fname" name="firstname" placeholder="Your name..">
