--- a/index.html
+++ b/index.html
@@ -186,10 +186,11 @@
                 <input required type="text" id="fname" name="firstname" placeholder="Your name..">
                 <label for="lname">Last Name</label>
                 <input required type="text" id="lname" name="lastname" placeholder="Your last name..">
-                <label for="lname">Email</label>
+                <label for="lemail">Email</label>
                 <input required type="text" id="lemail" name="lastname" placeholder="Your email address..">
                 <label for="country">Country</label>
                 <select required id="country" name="country">
+                    <option selected disabled>Please Select One</option>
                     <option value="usa">USA</option>
                     <option value="canada">Canada</option>
                     <option value="australia">El Salvador</option>
